#11591 [CMDB] CI 조회 수정 이력 오류 -> 일감 분석 및 수정 진행

--- a/src/main/resources/public/template/cmdb/ci/ciView.html
+++ b/src/main/resources/public/template/cmdb/ci/ciView.html
@@ -93,7 +93,7 @@
                 <td th:if="${#strings.isEmpty(ciHistory.documentNo)}" style="width: 40%;" class="align-left" th:text="#{common.label.emptyData}"></td>
                 <td th:unless="${#strings.isEmpty(ciHistory.documentNo)}" style="width: 40%;" th:text="${ciHistory.documentNo}"></td>
                 <td th:if="${#strings.isEmpty(ciHistory.createUser)}" style="width: 20%;" class="align-center" th:text="#{common.label.emptyData}"></td>
-                <td th:unless="${#strings.isEmpty(ciHistory.createUser)}" style="width: 20%;" class="align-center" th:text="#{ciHistory.createUser}"></td>
+                <td th:unless="${#strings.isEmpty(ciHistory.createUser)}" style="width: 20%;" class="align-center" th:text="${ciHistory.createUser}"></td>
                 <td style="width: 20%;" class="date-time align-center" th:text="${ciHistory.applyDt}"></td>
                 <td style="width: 10%;" class="align-center" th:text="#{|cmdb.ci.label.status.${ciHistory.ciStatus}|}"></td>
                 <td th:if="${ciHistory.interlink == true}" style="width: 10%;" class="align-center" th:text="#{cmdb.ci.label.interlink}"></td>
