#11705 [사용자 정의 차트 리팩토링] Basic Line Chart 구현 : 업데이트시 데이터를 전달받는 구조로 변경

--- a/src/main/resources/public/template/chart/chartSearch.html
+++ b/src/main/resources/public/template/chart/chartSearch.html
@@ -149,7 +149,7 @@ const zChartManager = {
         this.zChart = new ZChart('container', data);
 
         // 데이터 업데이트
-        this.zChart.update();
+        this.zChart.update(data.chartData);
     },
     destroy: function () {
         if (this.zChart) {
