--- a/src/main/resources/public/template/cmdb/attribute/attributeSearch.html
+++ b/src/main/resources/public/template/cmdb/attribute/attributeSearch.html
@@ -16,7 +16,7 @@
            th:value="true"/>
     <input type="hidden" sec:authorize="!hasAuthority('cmdb.attribute.create') && !hasAuthority('cmdb.attribute.update')" th:name="isRole"
            th:value="false"/>
-    <form id="searchFrm">
+    <form id="searchFrm" onsubmit = "return false">
         <input class="z-input i-search text-ellipsis col-5 mr-2" id="searchValue" name="searchValue" type="text" maxlength="100"
                th:placeholder="#{cmdb.attribute.label.searchPlaceholder}"/>
         <th:block th:replace="layout/itsm/fragment/totalCountFragment :: totalCountFragment"></th:block>
