--- a/src/main/resources/public/template/process/processSearch.html
+++ b/src/main/resources/public/template/process/processSearch.html
@@ -17,7 +17,7 @@
 </div>
 <div layout:fragment="pageSearching">
     <input type="hidden" id="updatable" th:value="${#authorization.expression('hasAuthority(''process.update'')')}"/>
-    <form id="searchFrm">
+    <form id="searchFrm" onsubmit = "return false">
         <input type="text" id="searchValue" name="searchValue" class="z-input i-search text-ellipsis col-5 mr-2"  maxlength="100"
                th:placeholder="#{process.label.searchPlaceholder}"/>
         <th:block th:replace="layout/itsm/fragment/totalCountFragment :: totalCountFragment"></th:block>
