--- a/src/main/resources/public/template/scheduler/schedulerSearch.html
+++ b/src/main/resources/public/template/scheduler/schedulerSearch.html
@@ -16,7 +16,7 @@
            th:name="isRole" th:value="true"/>
     <input type="hidden" sec:authorize="!hasAuthority('scheduler.create') && !hasAuthority('scheduler.update')"
            th:name="isRole" th:value="false"/>
-    <form id="searchFrm">
+    <form id="searchFrm" onsubmit = "return false">
         <input type="text" id="searchValue" name="searchValue" class="z-input i-search text-ellipsis col-5 mr-2" maxlength="100"
                th:placeholder="#{scheduler.label.searchPlaceholder}"/>
         <th:block th:replace="layout/itsm/fragment/totalCountFragment :: totalCountFragment"></th:block>
