--- a/src/main/resources/public/scss/template/_icons.scss
+++ b/src/main/resources/public/scss/template/_icons.scss
@@ -14,6 +14,7 @@
  */
 .z-icon {
   display: inline-block;
+  -webkit-print-color-adjust:exact;
   // 검색 아이콘
   &.i-search {
     @include maskImage('#{$icon-folder-path}icon_search.svg', 1.5rem, 1.5rem, no-repeat, center); // 24px 24px
