--- a/src/main/resources/public/scss/document/_variables.scss
+++ b/src/main/resources/public/scss/document/_variables.scss
@@ -45,6 +45,10 @@ $token-related-add-bg-color:                 $neutral50;
 
 $token-related-name-color:                   $gray800;
 $token-related-numbering-color:              $gray500;
+
+$token-list-modal-width:                     62.5rem; // 1000px
+$token-list-modal-height:                    53.0625rem; // 849px
+
 // 댓글
 $token-comment-border-color:                 $gray300;
 $token-comment-border-width:                 0.0625rem; // 1px
