--- a/src/main/resources/public/assets/css/document.css
+++ b/src/main/resources/public/assets/css/document.css
@@ -2228,6 +2228,34 @@ body.modal-active {
   display: block;
   z-index: 1000;
 }
+.modal-wrapper .modal-dialog.token-list {
+  width: 62.5rem;
+  height: 53.0625rem;
+}
+.modal-wrapper .modal-dialog.token-list .modal-content {
+  height: calc(53.0625rem - 3.875rem - 5rem);
+  padding: 0.625rem 1.25rem;
+}
+.modal-wrapper .modal-dialog.token-list .modal-content .related-instance-list {
+  margin-top: 0.9375rem;
+}
+.modal-wrapper .modal-dialog.token-list .modal-content .related-instance-list .table-set {
+  margin-top: 1.875rem;
+}
+.modal-wrapper .modal-dialog.token-list .modal-content .related-instance-list .table-set .z-table .z-table-body {
+  display: block;
+  width: 60rem;
+  height: 35.313rem;
+  overflow-y: auto;
+  border: none;
+}
+.modal-wrapper .modal-dialog.token-list .modal-content .related-instance-list .table-set .z-table .z-table-body .attribute-list,
+.modal-wrapper .modal-dialog.token-list .modal-content .related-instance-list .table-set .z-table .z-table-body .instance-list {
+  display: flex;
+  width: 100%;
+  height: 2.188rem;
+  line-height: 2.188rem;
+}
 .modal-wrapper .modal-dialog.cmdb-ci-register-modal, .modal-wrapper .modal-dialog.cmdb-ci-update-modal, .modal-wrapper .modal-dialog.cmdb-ci-view-modal, .modal-wrapper .modal-dialog.cmdb-ci-list-modal {
   width: 62.5rem;
   height: 53.0625rem;
