--- a/src/main/resources/public/template/user/userEditSelf.html
+++ b/src/main/resources/public/template/user/userEditSelf.html
@@ -217,10 +217,10 @@
                                     th:text="#{common.btn.select}"></button>
                         </div>
                     </div>
-                    <div class="flex-column col-2">
+                    <div class="flex-column col-2 ml-2">
                         <label class="field-label" th:text="#{user.label.executeCurrentAbsence}"></label>
                         <div class="flex-row z-input-button">
-                            <button type="button" class="z-button-search z-button form" onclick="runAbsenceDocument();"
+                            <button type="button" class="z-button form" onclick="runAbsenceDocument();"
                                     th:text="#{user.btn.immediately}"></button>
                         </div>
                     </div>
