--- a/src/main/resources/public/template/scheduler/schedulerHistoryListModal.html
+++ b/src/main/resources/public/template/scheduler/schedulerHistoryListModal.html
@@ -15,7 +15,7 @@
     <tr class="no-data-found-list flex-row align-items-center" th:if="${#arrays.isEmpty(schedulerHistoryList)}">
         <td style="width: 100%;" colspan="9" class="align-center" th:text="#{common.msg.noData}"></td>
     </tr>
-    <th:block th:each="schedulerHistory, index : ${schedulerHistoryList}">
+    <th:block th:fragment="list" th:each="schedulerHistory, index : ${schedulerHistoryList}">
         <tr class="list-row">
             <td style="width: 15%;" class="align-center" th:text="${schedulerHistory.historySeq}" th:title="${schedulerHistory.historySeq}"></td>
             <td style="width: 10%;" class="align-center" th:if="${schedulerHistory.immediatelyExecute == true }" th:text="O"></td>
