--- a/src/main/resources/public/template/scheduler/scheduler.html
+++ b/src/main/resources/public/template/scheduler/scheduler.html
@@ -238,14 +238,152 @@
             if (offsetCount === 0) {
                 offsetCount = aliceJs.searchDataCount;
                 restModalSubmit('/schedulers/' + taskId + '/history?offset=' + offsetCount + '&isScroll=' + isScroll, 'GET', {}, false, isScroll, function (content) {
-                    let tempTbody = document.createElement('tbody');
-                    tempTbody.innerHTML = content;
+                    let content2 = `
+        <tr class="list-row">
+            <td style="width: 15%;" class="align-center" title="53208">53208</td>
 
-                    for(let child of tempTbody.children) {
-                        console.log(child.innerHTML);
-                        //document.querySelector('.z-table-body .os-content').insertAdjacentElement('beforeend', child);
+            <td style="width: 10%;" class="align-center">X</td>
+            <td style="width: 25%;" class="align-center" name="executeTime" title="2021-11-15T23:42:47.643293">2021-11-15T23:42:47.643293</td>
+            <td style="width: 10%;" class="align-center" title="처리완료">처리완료</td>
+            <td style="width: 40%;" class="align-left"></td>
+        </tr>
+
+        <tr class="list-row">
+            <td style="width: 15%;" class="align-center" title="53207">53207</td>
+
+            <td style="width: 10%;" class="align-center">X</td>
+            <td style="width: 25%;" class="align-center" name="executeTime" title="2021-11-15T18:00:00.073713">2021-11-15T18:00:00.073713</td>
+            <td style="width: 10%;" class="align-center" title="처리완료">처리완료</td>
+            <td style="width: 40%;" class="align-left"></td>
+        </tr>
+
+        <tr class="list-row">
+            <td style="width: 15%;" class="align-center" title="53206">53206</td>
+
+            <td style="width: 10%;" class="align-center">X</td>
+            <td style="width: 25%;" class="align-center" name="executeTime" title="2021-11-14T18:00:00.024267">2021-11-14T18:00:00.024267</td>
+            <td style="width: 10%;" class="align-center" title="처리완료">처리완료</td>
+            <td style="width: 40%;" class="align-left"></td>
+        </tr>
+
+        <tr class="list-row">
+            <td style="width: 15%;" class="align-center" title="53204">53204</td>
+
+            <td style="width: 10%;" class="align-center">X</td>
+            <td style="width: 25%;" class="align-center" name="executeTime" title="2021-11-13T18:00:00.028937">2021-11-13T18:00:00.028937</td>
+            <td style="width: 10%;" class="align-center" title="처리완료">처리완료</td>
+            <td style="width: 40%;" class="align-left"></td>
+        </tr>
+
+        <tr class="list-row">
+            <td style="width: 15%;" class="align-center" title="53205">53205</td>
+
+            <td style="width: 10%;" class="align-center">X</td>
+            <td style="width: 25%;" class="align-center" name="executeTime" title="2021-11-13T18:00:00.027924">2021-11-13T18:00:00.027924</td>
+            <td style="width: 10%;" class="align-center" title="처리완료">처리완료</td>
+            <td style="width: 40%;" class="align-left"></td>
+        </tr>
+
+        <tr class="list-row">
+            <td style="width: 15%;" class="align-center" title="53202">53202</td>
+
+            <td style="width: 10%;" class="align-center">X</td>
+            <td style="width: 25%;" class="align-center" name="executeTime" title="2021-11-12T18:00:00.032974">2021-11-12T18:00:00.032974</td>
+            <td style="width: 10%;" class="align-center" title="처리완료">처리완료</td>
+            <td style="width: 40%;" class="align-left"></td>
+        </tr>
+
+        <tr class="list-row">
+            <td style="width: 15%;" class="align-center" title="53203">53203</td>
+
+            <td style="width: 10%;" class="align-center">X</td>
+            <td style="width: 25%;" class="align-center" name="executeTime" title="2021-11-12T18:00:00.032557">2021-11-12T18:00:00.032557</td>
+            <td style="width: 10%;" class="align-center" title="처리완료">처리완료</td>
+            <td style="width: 40%;" class="align-left"></td>
+        </tr>
+
+        <tr class="list-row">
+            <td style="width: 15%;" class="align-center" title="53201">53201</td>
+
+            <td style="width: 10%;" class="align-center">X</td>
+            <td style="width: 25%;" class="align-center" name="executeTime" title="2021-11-11T18:00:00.035952">2021-11-11T18:00:00.035952</td>
+            <td style="width: 10%;" class="align-center" title="처리완료">처리완료</td>
+            <td style="width: 40%;" class="align-left"></td>
+        </tr>
+
+        <tr class="list-row">
+            <td style="width: 15%;" class="align-center" title="53200">53200</td>
+
+            <td style="width: 10%;" class="align-center">X</td>
+            <td style="width: 25%;" class="align-center" name="executeTime" title="2021-11-11T18:00:00.012953">2021-11-11T18:00:00.012953</td>
+            <td style="width: 10%;" class="align-center" title="처리완료">처리완료</td>
+            <td style="width: 40%;" class="align-left"></td>
+        </tr>
+
+        <tr class="list-row">
+            <td style="width: 15%;" class="align-center" title="53197">53197</td>
+
+            <td style="width: 10%;" class="align-center">X</td>
+            <td style="width: 25%;" class="align-center" name="executeTime" title="2021-11-10T18:00:00.025837">2021-11-10T18:00:00.025837</td>
+            <td style="width: 10%;" class="align-center" title="처리완료">처리완료</td>
+            <td style="width: 40%;" class="align-left"></td>
+        </tr>
+
+        <tr class="list-row">
+            <td style="width: 15%;" class="align-center" title="53196">53196</td>
+
+            <td style="width: 10%;" class="align-center">X</td>
+            <td style="width: 25%;" class="align-center" name="executeTime" title="2021-11-09T18:00:00.028547">2021-11-09T18:00:00.028547</td>
+            <td style="width: 10%;" class="align-center" title="처리완료">처리완료</td>
+            <td style="width: 40%;" class="align-left"></td>
+        </tr>
+
+        <tr class="list-row">
+            <td style="width: 15%;" class="align-center" title="53195">53195</td>
+
+            <td style="width: 10%;" class="align-center">X</td>
+            <td style="width: 25%;" class="align-center" name="executeTime" title="2021-11-08T18:00:00.032605">2021-11-08T18:00:00.032605</td>
+            <td style="width: 10%;" class="align-center" title="처리완료">처리완료</td>
+            <td style="width: 40%;" class="align-left"></td>
+        </tr>
+
+        <tr class="list-row">
+            <td style="width: 15%;" class="align-center" title="53190">53190</td>
+
+            <td style="width: 10%;" class="align-center">X</td>
+            <td style="width: 25%;" class="align-center" name="executeTime" title="2021-11-07T18:00:00.037892">2021-11-07T18:00:00.037892</td>
+            <td style="width: 10%;" class="align-center" title="처리완료">처리완료</td>
+            <td style="width: 40%;" class="align-left"></td>
+        </tr>
+
+        <tr class="list-row">
+            <td style="width: 15%;" class="align-center" title="53191">53191</td>
+
+            <td style="width: 10%;" class="align-center">X</td>
+            <td style="width: 25%;" class="align-center" name="executeTime" title="2021-11-07T18:00:00.030">2021-11-07T18:00:00.030</td>
+            <td style="width: 10%;" class="align-center" title="처리완료">처리완료</td>
+            <td style="width: 40%;" class="align-left"></td>
+        </tr>
+
+        <tr class="list-row">
+            <td style="width: 15%;" class="align-center" title="53189">53189</td>
+
+            <td style="width: 10%;" class="align-center">X</td>
+            <td style="width: 25%;" class="align-center" name="executeTime" title="2021-11-06T18:00:00.041988">2021-11-06T18:00:00.041988</td>
+            <td style="width: 10%;" class="align-center" title="처리완료">처리완료</td>
+            <td style="width: 40%;" class="align-left"></td>
+        </tr>
+    `
+
+                    let tempTbody = document.createElement('tbody');
+                    tempTbody.innerHTML = content2;
+
+                    const container = document.createDocumentFragment();
+                    for(let i = 0; i < tempTbody.rows.length; i++) {
+                        let node = tempTbody.rows[i].cloneNode(true);
+                        container.appendChild(node);
                     }
-                    //document.querySelector('.z-table-body .os-content').insertAdjacentHTML('beforeend', tempTbody.innerHTML);
+                    document.querySelector('.z-table-body .os-content').appendChild(container);
                 })
             }
         } else {
