--- a/src/main/resources/public/scss/formDesigner/_properties.scss
+++ b/src/main/resources/public/scss/formDesigner/_properties.scss
@@ -127,6 +127,10 @@
       display: block;
       margin-left: 0.625rem; // 10px
       &.off { display: none; }
+      .z-input {
+        display: inline-block;
+        margin-left: 0;
+      }
     }
   }
   .picker-wrapper-date {
