--- a/src/main/resources/public/template/token/tokenSearch.html
+++ b/src/main/resources/public/template/token/tokenSearch.html
@@ -133,6 +133,7 @@
                     }
                     let tempDiv = document.createElement('div');
                     tempDiv.innerHTML = response.responseText;
+                    console.log(tempDiv)
                     setDateTimeFormat(tempDiv);
                     tempDiv.querySelectorAll('input[name=tokenTagList]').forEach(function (tagInput) {
                         new zTag(tagInput, {
